# ETH_HMA_Analysis

./: .gitignore  Makefile  README.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  analyze_data.py  check_duration.py  create_4h_data.py  matplotlibrc  pyproject.toml  requirements.txt  requirements_jupyter.txt  setup.py
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/reports/: ETH_HMA_Strategy_Report_20250927_015531.md  ETH_HMA_Strategy_Report_20250928_011137.md  ETH_HMA_Strategy_Report_20250928_040900.md  risk_trends_detailed_report.txt  trend_analysis_1h_20250926_081517.json  trend_analysis_1h_20250927_013534.json  trend_analysis_1h_20250927_015030.json  trend_analysis_1h_20250927_015324.json  trend_analysis_1h_20250928_011037.json  trend_analysis_1h_20250928_011627.json  trend_analysis_1h_20250928_012104.json  trend_analysis_1h_20250928_040900.json  trend_analysis_4h_20250926_081521.json  trend_analysis_4h_20250928_011627.json  trend_analysis_4h_20250928_012104.json  trend_analysis_4h_20250928_040900.json
dashboard/: financial_dashboard.py  financial_dashboard_advanced.py  financial_dashboard_fixed.py  financial_dashboard_insights.py  financial_dashboard_matplotlib.py  financial_dashboard_pro.py  financial_dashboard_unified.py  financial_dashboard_unified_cn.py  financial_dashboard_v2.py  requirements_dashboard.txt
docs/: AI_ASSISTANT_GUIDE.md  DATA_SUMMARY.md  JUPYTER_GUIDE.md  PROJECT_STRUCTURE.md  README.md  README_Jupyter.md  RESEARCH_LOG.md
docs/technical_manual/: README.md  ai_agent_guide.md  analysis_guide.md  api_reference.md  dashboard_guide.md  (+5 more)
notebooks/: 00_快速开始.ipynb  01_数据加载与预处理.ipynb  02_4h级别策略分析.ipynb  ETH_HMA_Analysis.ipynb
scripts/: generate_4h_matplotlib_report.py  generate_4h_summary_report.py  main.py  start_dashboard.py  start_jupyter.py  start_multi_dashboard.py  start_pro_dashboard.py  start_smart_dashboard.py  start_unified_dashboard.py  trend_analysis.py
src/: __init__.py
(+22 files in other folders)
